# a8s

./: README.md  prototype-spec.md
environments/claude/: .gitignore  ACKNOWLEDGEMENT  Dockerfile  README.md
environments/claude/docs/: desktop_environment_faq.md
k8s/: README.md  build-local-image.sh  claude-deployment.yaml  create-secret.sh  overseer-deployment.yaml  setup-minikube.sh  setup-pv-and-pvc.sh  web-deployment.yaml
overseer/: Dockerfile  README.md  SPEC-plugin-system.md  __init__.py  cleanup_minikube.sh  deploy_to_minikube.sh  docker-compose.yml  integration_test.py  pyproject.toml  run.py  run_integration_tests.sh
overseer/db/: alembic.ini  database.py
overseer/db/migrations/: 001_initial.py  env.py
overseer/db/migrations/versions/: 001_initial.py
overseer/k8s/: overseer.yaml
overseer/overseer/: __init__.py  main.py
overseer/overseer/api/: __init__.py  deployments.py
overseer/overseer/k8s/: __init__.py  client.py
overseer/overseer/models/: __init__.py  deployment.py
web/: .env.example  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  poc-specification.md  prototype-spec.md
web/app/: layout.tsx
web/app/(app)/admin-dashboard/: page.tsx
web/app/(app)/api/users/: route.ts
web/app/(auth)/: auth.ts
web/app/(chat)/api/chat/: route.ts
web/components/: admin-dashboard-header.tsx  admin-dashboard-stats.tsx  admin-dashboard-table.tsx  admin-dashboard.tsx  app-sidebar.tsx  chat-header.tsx  chat.tsx  deploy-vm.tsx  message-editor.tsx  message.tsx  messages.tsx  multimodal-input.tsx  overview.tsx  suggested-actions.tsx  vm-connection.tsx  vnc-viewer.tsx
web/hooks/: use-chat-visibility.ts  use-vm-connection.ts
web/lib/: utils.ts
web/lib/ai/: prompts.ts  providers.ts
web/lib/ai/tools/: deploy-vm.ts  index.ts
web/lib/db/: queries.ts  schema.ts
web/lib/db/migrations/: 0008_giant_secret_warriors.sql
web/lib/db/migrations/meta/: _journal.json  (+3 more)
web/types/: next-auth.d.ts
