[project]
name = "overseer"
version = "0.1.0"
description = "Kubernetes deployment service for a8s project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "kubernetes>=32.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "sqlalchemy==2.0.28",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "databases[postgresql]==0.9.0",
    "asyncpg==0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]
test = [
    "pytest>=7.4.2",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
